--- a/task.html
+++ b/task.html
@@ -1,19 +1,20 @@
 <h2>Description</h2>
 
-<p>Now that we are done with the basics, let's work on perfecting some details.</p>
+<p>The most recent version of the game is not so much fun, since we still don’t have a way to handle the player's victory. The player has 8 attempts to guess letters, and the number of remaining attempts decreases after each try even if the player guesses correctly.</p>
 
-<p>In the previous stage, if the user entered the same letter twice, the program reduced the number of remaining attempts regardless of whether this was a correct letter or not. This doesn’t seem fair to the player, does it? They gain no additional information about the situation on the field yet the program still reduces their remaining attempts. Let's fix it!</p>
+<p>In this next version, a player may get a lot of attempts because they are limited only by the number of mistakes they make. A player can be mistaken 8 times. They win when they have guessed <strong>all</strong> the letters and still have at least one try. If the player uses their last try and actually guesses the word, then they’ve won!</p>
 
 <h2>Objectives</h2>
 
+<p>The player starts the game with 8 "lives", which is to say, our player can input a wrong letter 8 times.</p>
+
 <ol>
-	<li>If the user enters the same letter twice, then the program should output <code class="java">You've already guessed this letter</code> . This message should also be printed if the user inputs a letter that doesn't appear in the word. The number of attempts shouldn't be decreased in this case. </li>
-	<li>Also, you should check to make sure the player entered an English lowercase letter. If not, the program should print <code class="java">Please enter a lowercase English letter</code> . </li>
-	<li>You should also check if the player entered exactly one letter. If not, the program should print <code class="java">You should input a single letter</code> . Remember that zero is also not one!</li>
-	<li>Note that none of these three errors should reduce the number of remaining attempts!</li>
+	<li>Print <code class="java">That letter does not appear in the word</code> and reduce the number of remaining attempts if the word selected by the program doesn't contain this letter.</li>
+	<li>Print <code class="java">No improvements</code> and reduce the attempts count if the selected word contains this letter but the user has already tried guessing it.</li>
+	<li>The number of remaining attempts should be decreased only if there are no letters to uncover.</li>
 </ol>
 
-<p><div class="alert alert-warning">Please, make sure that your program's output formatting precisely follows the output formatting in the example. Pay attention to the empty lines between tries and in the end.</div></p>
+<p><div class="alert alert-warning">Please, make sure that your program's output formatting precisely follows the output formatting in the example. Pay attention to the empty lines between tries and at the end.</div></p>
 
 <h2>Examples</h2>
 
@@ -23,61 +24,46 @@
 
 <pre><code class="language-no-highlight">H A N G M A N
 
-----------
-Input a letter: &gt; a
+------
+Input a letter: &gt; t
 
--a-a------
-Input a letter: &gt; i
-
--a-a---i--
-Input a letter: &gt; o
-That letter doesn't appear in the word
-
--a-a---i--
-Input a letter: &gt; o
-You've already guessed this letter
-
--a-a---i--
-Input a letter: &gt; p
-
--a-a---ip-
-Input a letter: &gt; p
-You've already guessed this letter
-
--a-a---ip-
-Input a letter: &gt; h
-That letter doesn't appear in the word
-
--a-a---ip-
-Input a letter: &gt; k
-That letter doesn't appear in the word
-
--a-a---ip-
-Input a letter: &gt; a
-You've already guessed this letter
-
--a-a---ip-
+--t---
 Input a letter: &gt; z
 That letter doesn't appear in the word
 
--a-a---ipt
+--t---
 Input a letter: &gt; t
+No improvements
 
--a-a---ipt
+--t---
+Input a letter: &gt; t
+No improvements
+
+--t---
+Input a letter: &gt; y
+
+-yt---
 Input a letter: &gt; x
 That letter doesn't appear in the word
 
--a-a---ipt
-Input a letter: &gt; b
+-yt---
+Input a letter: &gt; y
+No improvements
+
+-yt---
+Input a letter: &gt; p
+
+pyt---
+Input a letter: &gt; p
+No improvements
+
+pyt---
+Input a letter: &gt; q
 That letter doesn't appear in the word
 
--a-a---ipt
-Input a letter: &gt; d
-That letter doesn't appear in the word
-
--a-a---ipt
-Input a letter: &gt; w
-That letter doesn't appear in the word
+pyt---
+Input a letter: &gt; p
+No improvements
 You lost!</code></pre>
 
 <p><strong>Example 2</strong></p>
@@ -92,24 +78,16 @@ Input a letter: &gt; i
 That letter doesn't appear in the word
 
 j---
-Input a letter: &gt; +
-Please enter a lowercase English letter
+Input a letter: &gt; g
+That letter doesn't appear in the word
 
 j---
-Input a letter: &gt; A
-Please enter a lowercase English letter
+Input a letter: &gt; g
+That letter doesn't appear in the word
 
 j---
-Input a letter: &gt; ii
-You should input a single letter
-
-j---
-Input a letter: &gt; ++
-You should input a single letter
-
-j---
-Input a letter: &gt;
-You should input a single letter
+Input a letter: &gt; g
+That letter doesn't appear in the word
 
 j---
 Input a letter: &gt; g
@@ -120,5 +98,7 @@ Input a letter: &gt; a
 
 ja-a
 Input a letter: &gt; v
-You guessed the word java!
+
+java
+You guessed the word!
 You survived!</code></pre>
